// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`store/reducer > action = { type: '@app/FILTER_SOUNDS', payload: { query: 'foo' } } 1`] = `
{
  "chosenTagSlug": "recent",
  "command": {
    "open": false,
  },
  "sounds": {},
  "soundsFilter": "foo",
  "tags": {},
  "user": {
    "displayName": "",
    "email": "",
    "id": "",
  },
}
`;

exports[`store/reducer > action = { type: '@app/FILTER_SOUNDS', payload: { query: null } } 1`] = `
{
  "chosenTagSlug": "recent",
  "command": {
    "open": false,
  },
  "sounds": {},
  "soundsFilter": null,
  "tags": {},
  "user": {
    "displayName": "",
    "email": "",
    "id": "",
  },
}
`;
